dropshot/tests/fail/bad_endpoint10.stderr
error[E0277]: the trait bound `String: HttpResponseError` is not satisfied
  --> tests/fail/bad_endpoint10.rs:16:6
   |
16 | ) -> Result<HttpResponseOk<()>, String> {
   |      ^^^^^^ the trait `HttpResponseError` is not implemented for `String`
   |
   = note: consider using `dropshot::HttpError`, unless custom error presentation is needed
help: the trait `HttpResponseError` is implemented for `HttpError`
  --> src/handler.rs
   |
   | impl HttpResponseError for HttpError {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `validate_error_type`
  --> tests/fail/bad_endpoint10.rs:10:1
   |
10 | / #[endpoint {
11 | |     method = GET,
12 | |     path = "/test",
13 | | }]
   | |__^ required by this bound in `validate_error_type`
...
16 |   ) -> Result<HttpResponseOk<()>, String> {
   |        ------ required by a bound in this function
   = note: this error originates in the attribute macro `endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(RequestContext<()>) -> impl Future<Output = Result<HttpResponseOk<()>, String>> {<impl std::convert::From<bad_error_type> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::bad_error_type}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_endpoint10.rs:14:10
   |
10 | / #[endpoint {
11 | |     method = GET,
12 | |     path = "/test",
13 | | }]
   | |__- required by a bound introduced by this call
14 |   async fn bad_error_type(
   |            ^^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<()>) -> impl Future<Output = Result<HttpResponseOk<()>, String>> {<impl std::convert::From<bad_error_type> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::bad_error_type}`
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
